# BLR_GPU_experiments

./: README.md
aurora/: build.sh  environment.sh  make.inc
aurora/Helmholtz/: run.sl
driver/: CMakeLists.txt  Helmholtz.cpp  build.sh
frontier/: build.sh  environment.sh
patches/: superlu_dist.c
perlmutter/: build.sh  build_openblas.sh  build_openblas_cpu.sh  environment.sh  kblas_operators.h  make.inc  make.inc_openblas
perlmutter/Helmholtz/: run_MUMPS_flat.sh  run_PASTIX_flat.sh  run_STRUMPACK.sh  run_STRUMPACK_flat.sh  run_SUPERLU.sh  run_SUPERLU_flat.sh  run_Yang.sh  run_direct_cpu.sh  run_direct_gpu.sh  run_testHH.sh
perlmutter/Poisson3d/: run.sh
perlmutter/suitsparse/: run.sh  run_slu.sh
suitesparse/: download.sh
